tests/macros/confirm/choices.stderr
error: option `choices` does not exist for kind `confirm`
 --> $DIR/choices.rs:2:37
  |
2 |     discourse::questions![Confirm { choices: todo!() }];
  |                                     ^^^^^^^
