tests/macros/confirm/choices.rs
fn main() {
    discourse::questions![Confirm { choices: todo!() }];
}
